RESOLVED FIXED286592
[WebGPU] RenderPassEncoder::executeBundles reads state from the wrong buffer
https://bugs.webkit.org/show_bug.cgi?id=286592
Summary [WebGPU] RenderPassEncoder::executeBundles reads state from the wrong buffer
Mike Wyrzykowski
Reported 2025-01-27 14:30:28 PST
[WebGPU] Fix typo in RenderPassEncoder::executeBundles
Attachments
Radar WebKit Bug Importer
Comment 1 2025-01-27 14:30:50 PST
Mike Wyrzykowski
Comment 2 2025-01-27 15:01:13 PST
EWS
Comment 3 2025-01-29 20:12:09 PST
Committed 289539@main (e0d95fcb4ae9): <https://commits.webkit.org/289539@main> Reviewed commits have been landed. Closing PR #39606 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.