[WebGPU] RenderPassEncoder::executeBundles reads state from the wrong buffer https://bugs.webkit.org/show_bug.cgi?id=286592 rdar://143718094

Reviewed by Dan Glastonbury and Cameron McCormack.

ICB validation was reading the contents pointer
of the wrong buffer, which was the GPU address of the
intended buffer, resulting in increased validation.

Use the correct name instead.

* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::executeBundles):

Canonical link: https://commits.webkit.org/289539@main